# pose2d

./: Cargo.toml  LICENSE
src/: app.rs  config.rs  main.rs
src/gui/: editor.rs  images.rs  mod.rs
src/schema/: data.rs  file.rs  mod.rs  serializer.rs
